<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_embeddedrtps</name>
  <version>0.0.1</version>
  <description>Implement the micro-ROS interface using embeddedRTPS.</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache License 2.0</license>
  <author>Pablo Garrido</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake_ros</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <depend>embeddedrtps</depend>
  <depend>microcdr</depend>

  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_typesupport_microxrcedds_c</depend>
  <depend>rosidl_typesupport_microxrcedds_cpp</depend>

  <!--TODO(pablogs): we might want to compile rmw_dds_common as a conditioned external project
    to the existence of RMW_ERTPS_GRAPH flag. If so, remove this dependency.-->
  <depend>rmw_dds_common</depend>
  <depend>micro_ros_utilities</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
